<resources>
    <string name="app_name">51闪电贷</string>

    <string name="settings">设置</string>
    <string name="add_bill">添加记录</string>
    <string name="edit_bill">修改记录</string>

    <!-- Strings related to Settings -->
    <string name="feature">功能</string>
    <string-array name="themes">
        <item>粉红(默认)</item>
        <item>深蓝</item>
    </string-array>
    <string-array name="theme_values">
        <item>粉红</item>
        <item>深蓝</item>
    </string-array>
    <string name="view_mode">显示模式</string>
    <string name="backup_or_restore">备份/恢复</string>
    <string-array name="view_modes">
        <item>月(默认)</item>
        <item>年</item>
        <item>日</item>
        <item>周</item>
    </string-array>
    <string-array name="view_mode_values">
        <item>月</item>
        <item>年</item>
        <item>日</item>
        <item>周</item>
    </string-array>
    <string name="remind">提醒</string>
    <string name="enable_remind_add_bill">记账提醒</string>
    <string name="remind_add_bill">提醒时间</string>
    <string name="remind_add_bill_default_summary">10:00</string>
    <string name="other">其他</string>
    <string name="version_name">当前版本: %s</string>
    <string name="enable_remind_exceeding">超额提醒</string>
    <string name="remind_exceeding">每月额度</string>
    <string name="remind_exceeding_default_summary">1000</string>
    <string name="remind_exceeding_empty_tips">额度不能为零</string>
    <string name="info_default">Unknown</string>
    <string name="check_for_update">检查更新</string>
    <string name="already_the_newest_version">已是最新版本</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="feature_is_not_yet_open">此功能暂未开放</string>

    <!-- Strings related to Bill -->
    <string name="title_year">年份</string>
    <string name="date_format">%1$s\n%2$s</string>
    <string name="income_format">收入(元)\n%s</string>
    <string name="expense_format">支出(元)\n%s</string>

    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="money">金额</string>
    <string name="note">备注</string>

    <string-array name="default_consumption_type">
        <item>一般</item>
        <item>餐饮</item>
        <item>交通</item>
        <item>娱乐</item>
        <item>通讯</item>
        <item>居家</item>
        <item>服饰</item>
        <item>学习</item>
        <item>医疗</item>
        <item>运动</item>
        <item>理财</item>
        <item>自定义</item>
    </string-array>

    <string name="supports_up_to_four_words">最多支持4个字</string>
    <string name="input_consumption_type">请输入类别名称</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="never_show_this">不再提示</string>

    <string name="no_related_data">暂无相关数据</string>

    <string-array name="week_str">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>

    <string name="exceeding_limit_title">额度提醒</string>
    <string name="less_that_exceeding_limit">当前月额度为：%1$s元\n距离上限还有：%2$s元</string>
    <string name="equals_to_exceeding_limit">当前月额度为：%1$s元\n当月支出已达上限</string>
    <string name="more_that_exceeding_limit">当前月额度为：%1$s元\n超出上限：%2$s元</string>

    <!-- Strings related to Menu -->
    <string name="delete">删除</string>
    <string name="restore_data">恢复数据</string>
    <string name="backup_data">备份数据</string>

    <!-- Strings related to Backup or Restore -->
    <string name="backup_and_restore">备份 &amp; 恢复</string>
    <string name="timely_backup">及时备份可防止数据丢失。</string>
    <string name="backup_failed">备份失败，无权限写入文件。</string>
    <string name="backup_succeed_format">及时备份可防止数据丢失。\n最后备份时间：%s。</string>
    <string name="backup_succeed">备份成功</string>
    <string name="restore_failed">恢复失败，备份文件异常。</string>
    <string name="restore_succeed_text">数据已恢复。</string>
    <string name="restore_succeed">数据恢复成功</string>

    <!-- Strings related to notification -->
    <string name="add_bill_title">记账提醒</string>
    <string name="add_bill_content">来记下消费记录吧 O(∩_∩)O~</string>

    <string name="captcha_btn_resend">重发验证码</string>
    <string name="validate_btn_hint">获取验证码</string>
    <string name="password_check">请输入6-20位密码</string>
    <string name="get_verification_code">获取验证码</string>
</resources>
