<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/feature">
        <ListPreference
            android:defaultValue="粉红"
            android:entries="@array/themes"
            android:entryValues="@array/theme_values"
            android:key="default_theme"
            android:title="主题" />

        <ListPreference
            android:defaultValue="月"
            android:entries="@array/view_modes"
            android:entryValues="@array/view_mode_values"
            android:key="view_mode"
            android:title="@string/view_mode" />

        <Preference
            android:key="backup_or_restore"
            android:title="@string/backup_or_restore">
            <intent
                android:action="org.xqj.bill.action.BACKUP_OR_RESTORE"
                android:targetClass="org.xqj.bill.BackupOrRestoreActivity"
                android:targetPackage="org.xqj.bill" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/remind">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_remind_add_bill"
            android:title="@string/enable_remind_add_bill" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_remind_exceeding"
            android:title="@string/enable_remind_exceeding" />

        <Preference
            android:enabled="false"
            android:key="remind_add_bill"
            android:summary="@string/remind_add_bill_default_summary"
            android:title="@string/remind_add_bill" />

        <EditTextPreference
            android:defaultValue="@string/remind_exceeding_default_summary"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:key="remind_exceeding"
            android:summary="@string/remind_exceeding_default_summary"
            android:title="@string/remind_exceeding" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">
        <Preference
            android:key="check_for_update"
            android:summary="@string/info_default"
            android:title="@string/check_for_update" />
        <Preference
            android:key="help_and_feedback"
            android:title="@string/help_and_feedback" />
    </PreferenceCategory>

</PreferenceScreen>