<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/horizontal_margin">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/type_group"
        android:layout_alignTop="@+id/type_group"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:background="@drawable/abc_spinner_mtrl_am_alpha"
        android:gravity="center_vertical"
        android:paddingEnd="32dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry"
        tools:text="2016-01-01" />

    <RadioGroup
        android:id="@+id/type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_toEndOf="@+id/date"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:checked="true"
            android:text="@string/expense" />

        <RadioButton
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:text="@string/income" />

    </RadioGroup>

    <Spinner
        android:id="@+id/consumption_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sum_layout"
        android:layout_alignTop="@+id/sum_layout"
        android:background="@drawable/abc_spinner_mtrl_am_alpha" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sum_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_group"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_toEndOf="@+id/consumption_type">

        <EditText
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/money"
            android:inputType="numberDecimal"
            android:maxLines="1"
            tools:text="1234.20" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/consumption_type"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin">

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:maxLength="200"
            tools:text="大概这是备注吧" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_white_48dp" />
</RelativeLayout>